tried to implement previousBidID
