# src/api/types/api-types.ts
@@ -35,7 +35,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Invalid request */
@@ -44,7 +46,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Representation not found */
@@ -53,7 +57,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Internal server error */
@@ -62,7 +68,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
             };
@@ -104,7 +112,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Invalid request */
@@ -113,7 +123,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Representation not found */
@@ -122,7 +134,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Internal server error */
@@ -131,7 +145,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
             };
@@ -142,7 +158,7 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
-    "/agent/representations": {
+    "/agent/representation": {
         parameters: {
             query?: never;
             header?: never;
@@ -173,7 +189,7 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": components["schemas"]["server.RepresentationsWithNullableTime"][];
+                        "application/json": components["schemas"]["server.RepresentationData"][];
                     };
                 };
                 /** @description Invalid request */
@@ -182,7 +198,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Unauthorized */
@@ -191,7 +209,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Internal server error */
@@ -200,7 +220,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
             };
@@ -246,7 +268,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Invalid request */
@@ -255,7 +279,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Client not found */
@@ -264,7 +290,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
                 /** @description Internal server error */
@@ -273,7 +301,9 @@ export interface paths {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": string;
+                        "application/json": {
+                            [key: string]: unknown;
+                        };
                     };
                 };
             };
@@ -470,7 +500,7 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
-    "/bidding/listBidsOnListing": {
+    "/bidding/listLatestBidOnListing": {
         parameters: {
             query?: never;
             header?: never;
@@ -480,8 +510,8 @@ export interface paths {
         get?: never;
         put?: never;
         /**
-         * given listing, list all bids with that as the listing
-         * @description listing all bids with a given listing
+         * given listing, list most recent bid on a listing
+         * @description listing most recent bid on a listing
          */
         post: {
             parameters: {
@@ -490,20 +520,20 @@ export interface paths {
                 path?: never;
                 cookie?: never;
             };
-            /** @description listing all bids that have a specific listing */
+            /** @description listing most recent bid on a specific listing */
             requestBody: {
                 content: {
                     "application/json": components["schemas"]["server.listBidsOnListingRequest"];
                 };
             };
             responses: {
-                /** @description list of bids */
+                /** @description bid */
                 200: {
                     headers: {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": components["schemas"]["server.listBidResponse"][];
+                        "application/json": components["schemas"]["server.listBidResponse"];
                     };
                 };
                 /** @description Bad Request */
@@ -588,6 +618,68 @@ export interface paths {
             };
         };
         post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/bidding/updateBidStatus": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        /**
+         * update a bid's status
+         * @description update a bid's status
+         */
+        post: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            /** @description update a bid status */
+            requestBody: {
+                content: {
+                    "application/json": components["schemas"]["server.updateBidStatusRequest"];
+                };
+            };
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": string;
+                    };
+                };
+                /** @description Bad Request */
+                400: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": string;
+                    };
+                };
+                /** @description Internal Server Error */
+                500: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": string;
+                    };
+                };
+            };
+        };
         delete?: never;
         options?: never;
         head?: never;
@@ -985,17 +1077,22 @@ export interface components {
             time?: string;
             valid?: boolean;
         };
-        "server.RepresentationsWithNullableTime": {
+        "server.RepresentationData": {
+            agent_first_name?: string;
             agent_id?: number;
-            created_at?: string;
+            agent_last_name?: string;
+            agent_username?: string;
+            client_first_name?: string;
+            client_id?: number;
+            client_last_name?: string;
+            client_username?: string;
             end_date?: components["schemas"]["server.NullableTime"];
             id?: number;
             is_active?: boolean;
-            signed_date?: components["schemas"]["server.NullableTime"];
+            requested_at?: string;
+            signed_at?: components["schemas"]["server.NullableTime"];
             start_date?: string;
             status?: string;
-            updated_at?: string;
-            user_id?: number;
         };
         "server.bidResponse": {
             AgentID: number;
@@ -1043,7 +1140,6 @@ export interface components {
             ListingID: number;
         };
         "server.listBidsRequest": {
-            BuyerID: number;
             Username: string;
         };
         "server.listingResponse": {
@@ -1081,6 +1177,10 @@ export interface components {
             client_username: string;
             end_date: string;
             start_date: string;
+        };
+        "server.updateBidStatusRequest": {
+            BidId: number;
+            NewStatus: string;
         };
         "server.userMeResponse": {
             user?: components["schemas"]["server.userResponse"];
